--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xpr-angular",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Angular Module for using XPRMNTL.toggle",
   "author": "Dan Crews <crewsd@gmail.com>",
   "keywords": [
@@ -10,6 +10,10 @@
     "feature toggles",
     "XPRMNTL"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/XPRMNTL/xpr-angular.js.git"
+  },
   "devDependencies": {
     "del": "^1.1.1",
     "gulp": "^3.8.11",
