--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "xpr-angular",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Angular Module for using XPRMNTL.toggle",
   "author": "Dan Crews <crewsd@gmail.com>",
+  "license": "MIT",
   "keywords": [
     "angular",
     "experiments",
@@ -18,6 +19,7 @@
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
+    "gulp-header": "^1.2.2",
     "gulp-rename": "^1.2.0",
     "gulp-uglifyjs": "^0.6.1"
   },
