Fixing bower name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "xpr-angular.js",
+  "name": "xpr-angular",
   "homepage": "https://github.com/XPRMNTL/xpr-angular.js",
   "authors": [
     "Dan Crews <crewsd@gmail.com>"
